--- a/pom.xml
+++ b/pom.xml
@@ -155,4 +155,13 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+
+  <repositories>
+    <repository>
+        <id>maven-restlet</id>
+        <name>Public online Restlet repository</name>
+        <url>http://maven.restlet.org</url>
+    </repository>
+  </repositories>
+
 </project>
